# physics-tutor-lora

./: .gitignore  README.md  Suitability_analysis.md  interview_qa.md  pyproject.toml  qlora_faq.md
configs/: qwen3-4b-lora.env
data/processed/: test.jsonl  train.jsonl  valid.jsonl
data/raw/: README.md  physics_sft_v1.manifest.json  physics_sft_v1.md  physics_tutor_train.jsonl  physics_tutor_valid.jsonl
data/seed/: README.md  test_prompts.jsonl  train.jsonl  valid.jsonl
prompts/: physics_einstein_inspired_system.txt
scripts/: build_physics_sft_corpus.py  compile_dataset.py  dataset_io.py  evaluate_ollama.py  train_lora.sh  validate_dataset.py
tests/: test_dataset_pipeline.py  test_physics_sft_builder.py
